Fix image issue on Safari

--- a/app/components/Work/work.module.scss
+++ b/app/components/Work/work.module.scss
@@ -27,23 +27,9 @@
     }
 
     &__image {
-      grid-column: span 12;
+      height: auto;
       border: solid 1px #565656;
-      width: 100%;
-      height: 100%;
       border-radius: 16px;
-      display: block;
-
-      @media (min-width: 768px) {
-        grid-column: span 4;
-        width: 100%;
-        height: auto;
-      }
-
-      & > img {
-        display: block;
-        width: 100%;
-      }
     }
 
     p {
